tests/NormalTests/paczka2/big_fuzzy/98814247.err
Error in line 18: RbHDFvw6W9l A13 -23,9
Error in line 13: LS3 S840 20,1
Error in line 12: RbHDFvw6W9l A13 17,5
Error in line 47: A13 A64 245,5
Error in line 48: A13 A13 24,2
Error in line 50: A13 S840 24,2
Error in line 42: RbHDFvw6W9l A64 63,1
Error in line 59: RbHDFvw6W9l S840 92,7
Error in line 39: HawUosRs7I S60 80,1
Error in line 62: RbHDFvw6W9l A13 70,7
Error in line 78: 17KHPFyGA?j S?0 212,9
Error in line 76: RbHDFvw6W9l S840 41,6
Error in line 80: AeZp5At S60 17,3
Error in line 69: 17KHPFyGA6j S60 53,5
Error in line 85: 7WyJU A13 63,0
Error in line 97: HawUosRs7I A13 44,6
Error in line 102: LS3 A13 ?6,0
Error in line 132: A13 A13 92,0
Error in line 133: HawUosRs7I A64 37,0
Error in line 154: HawUosRs7I A64 57,74
Error in line 157: 7WyJU A13 93,1
Error in line 143: HawUosRs7I A64 60,4
Error in line 162: HawUosRs7I S840 65,5
Error in line 166: HawUosRs7I A64 57,0
Error in line 167: HawUosRs7I S840 8,3
Error in line 165: LS3 A64 58,7
Error in line 181: A13 A13 61,1
Error in line 179: HawUosRs7I A64 73,3
Error in line 191: HawUosRs7I S840 15,9
Error in line 195: 7WyJU S840 36,9
Error in line 202: 7WyJU S60 18,5
Error in line 194: RbHDFvw6W9l A13 3,8
Error in line 206: RbHDFvw6W9l A64 30,3
Error in line 205: LS3 A64 86,0
Error in line 208: RbHDFvw6W9l A13 0,5
Error in line 203: 7WyJU A64 10,1
Error in line 199: A13 A64 138,4
Error in line 215: HawUosRs7I A64 18,73
Error in line 209: LS3 A13 53,2
Error in line 217: AeZp5At A13 23,4
Error in line 219: AeZp5At S840 79,0
Error in line 221: 7WyJU S840 -1,0
Error in line 216: LS3 S840 84,3
Error in line 211: 7WyJU S840 95,5
Error in line 232: 17KHPFyGA6j S60 160,2
Error in line 238: LS3 A64 3,7
Error in line 226: 7WyJU S60 92,7
Error in line 197: HawUosRs7I A64 4,5
Error in line 239: 17KHPFyGA6j A64 68,2
